fix table content alignment

--- a/sass/subpages/_barber.scss
+++ b/sass/subpages/_barber.scss
@@ -20,6 +20,10 @@ body.subpage-barber {
       table {
         width: 50%;
 
+        td:last-of-type {
+          text-align: right;
+        }
+
         strong {
           @include fontWeight('medium');
         }
